<resources>
    <string name="app_name">Chess_Endgame</string>
    <string name="chess_endgame">Chess Endgame!</string>
    <string name="new_game">New Game</string>
    <string name="rook_game">Rook Game</string>
    <string name="two_bishops_game">Two Bishops Game</string>
    <string name="queen_game">Queen Game</string>
    <string name="queen_and_bishop">Queen and Bishop</string>
    <string name="two_knights_and_bishop">Two Knights and Bishop</string>
    <string name="two_queens">Two Queens</string>
    <string name="two_rooks">Two Rooks</string>
    <string name="two_bishops">Two Bishops</string>
    <string name="rook">Rook</string>
    <string name="queen">Queen</string>
    <string name="_0_1">0;1</string>
    <string name="_1_1">-1;-1</string>
    <string name="_1_0">1;0</string>
    <string name="back">Back</string>
    <string name="check_mate">CHECK MATE</string>
    <string name="records">Records</string>
    <string name="recordss">Recordss</string>
    <string name="board">BOARD</string>
    <string name="moves">MOVES</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
</resources>