<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardSettingActivity">

    <Button
        android:id="@+id/Q_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/R_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BB_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_bishops"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/RR_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_rooks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/QQ_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_queens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/NNB_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_knights_and_bishop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/QB_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queen_and_bishop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

</androidx.constraintlayout.widget.ConstraintLayout>